[package]
name = "FCFFh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossbeam-channel = "0.5.12"
eframe = "0.26.2"
egui = "0.26.2"
glob = "0.3.1"
rouille = "3.6.2"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
